--- a/app/src/main/res/layout/activity_mother_home.xml
+++ b/app/src/main/res/layout/activity_mother_home.xml
@@ -133,7 +133,7 @@
                             <ImageView
                                 android:layout_width="100dp"
                                 android:layout_height="100dp"
-                                app:srcCompat="@drawable/info" />
+                                app:srcCompat="@drawable/firstaid2" />
 
                             <TextView
                                 android:layout_width="wrap_content"
