--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,6 +14,7 @@
     <color name="colortandringstart">#00B09B</color>
     <color name="colortandringEnd">#96c93D</color>
     <color name="colordevider">#D6D6D6</color>
+    <color name="yollow">#F8A731</color>
 
 
 
