prosob fistula update

--- a/app/src/main/res/values/font_strings.xml
+++ b/app/src/main/res/values/font_strings.xml
@@ -80,7 +80,22 @@
 
 
         <string name="nobojatok">নবজাতক সম্পর্কিত</string>
+
+
         <string name="firstaid_fistola">প্রসবজনিত ফিস্টুলা</string>
+        <string name="firstaid_fistola_1">পফিস্টুলা কি ?</string>
+        <string name="firstaid_fistola_2">বিলম্বিত ও বাধাগ্রসস্ত প্রসবের কারনে সৃষ্ট ক্ষতের মধ্যে দিয়ে প্রসব
+                পথে অনবরত প্রস্রাব বা পায়খানা বা উভয় ঝরাকে প্রসব জনিত ফিস্টুলা বলা হয় ।
+               \n \n এই সমস্যার পাশাপাশি ফিস্টুলা রোগীরা আরো অনেক শারীরিক সমস্যায় ভুগতে পারেন ।লা</string>
+        <string name="firstaid_fistola_3">* ফিস্টুলা রোগীরা সাধারনত \n সামাজিকভাবে অবহেলা এবং অবমাননার শিকার হন,
+                যা তাদের জীবনকে দুর্বিসহ করে তোলে ।</string>
+        <string name="firstaid_fistola_4">প্রসবজনিত ফিস্টুলায় আক্রান্ত-মহিলাদরে সনাক্ত করার চেকলিস্ট :</string>
+        <string name="firstaid_fistola_5">১. মহিলার প্রসব বা ডেলিভারি হয়েছিল ?
+                \n ২. প্রসব বা ডেলিভারির ব্যাথা ১২ ঘন্টার বেশী স্থায়ী হয়েছিল ?
+                \n ৩. প্রসব পরবর্তী মাসিকের রাস্তা দিয়ে সর্বক্ষন পস্রাব বা পায়খানা ঝরে</string>
+        <string name="firstaid_fistola_6">* উপরের সবগুলো প্রশ্নের উত্তর ‘হ্যাঁ’ হলে এই মহিলাকে হাসপাতালে রেফার করুন</string>
+
+
 
         <string name="firstaid_after_proshop">প্রসব পরবর্তী সেবা</string>
         <string name="firstaid_after_checkup">প্রসব পরবর্তী সময়ে চার বার চেকআপ নিশ্চিত করুন </string>
